compile_server/temp/1690588196790_31.compile_error
./temp/1690588196790_31.cpp: In member function ‘bool Solution::isPalindrome(int)’:
./temp/1690588196790_31.cpp:20:15: error: ‘n’ was not declared in this scope
     return m==n;
               ^
